--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                app:srcCompat="@drawable/ic_draw_line" />
+                app:srcCompat="@android:drawable/ic_menu_edit" />
 
             <ImageButton
                 android:id="@+id/btnDrawLine"
@@ -72,6 +72,14 @@
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 app:srcCompat="@android:drawable/btn_star" />
+
+            <ImageButton
+                android:id="@+id/btnClearDraw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                app:srcCompat="@android:drawable/ic_input_delete" />
         </LinearLayout>
 
         <com.example.paint1.view.DrawingView
