--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,20 +50,22 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/btnDrawSimple"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                app:srcCompat="@android:drawable/ic_menu_edit" />
-
-            <ImageButton
                 android:id="@+id/btnDrawLine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                app:srcCompat="@android:drawable/btn_star_big_on" />
+                android:tint="#000000"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+
+            <ImageButton
+                android:id="@+id/btnDrawRect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:tint="#000000"
+                app:srcCompat="?attr/actionModeSelectAllDrawable" />
 
             <ImageButton
                 android:id="@+id/btnDrawEllipse"
@@ -71,7 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                app:srcCompat="@android:drawable/btn_star" />
+                android:tint="#000000"
+                app:srcCompat="?android:attr/textSelectHandle" />
 
             <ImageButton
                 android:id="@+id/btnClearDraw"
